--- a/LAB3/LaboratorioGuiado3/LaboratorioGuiado3.vcxproj.filters
+++ b/LAB3/LaboratorioGuiado3/LaboratorioGuiado3.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="grafo_p_z.txt" />
+    <Text Include="grafo_p.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
